orders.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: nginx
        image: 510612307821.dkr.ecr.us-east-1.amazonaws.com/image3
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: orders
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: orders
